--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/components/GroupByColor/GroupByColor.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/components/GroupByColor/GroupByColor.less
@@ -1,9 +1,5 @@
 @import '../../../../../../../vars';
 
-.GroupByColor__title {
-  margin-bottom: var(--component-spacing-xs) !important;
-}
-
 .ColorPalette {
   display: flex;
   align-items: center;
@@ -41,4 +37,8 @@
 
 .ColorPalette__colors--1 .ColorPalette__colors__item {
   width: calc(150px / 24);
+}
+
+.GroupByColor__title {
+  margin-bottom: var(--component-spacing-sm) !important;
 }
