Implement system resource tracking visualization (#242)
* Display message when no params are logged

* Implement system resource tracking visualization

--- a/client/src/screens/hub/HubMainScreen/components/SelectForm/components/SelectInput/SelectInput.less
+++ b/client/src/screens/hub/HubMainScreen/components/SelectForm/components/SelectInput/SelectInput.less
@@ -200,6 +200,14 @@
     .SelectInput__dropdown__group__item__icon__letter {
       background-color: var(--color-blue);
     }
+
+    &.system {
+      color: var(--color-magenta);
+      &:before,
+      .SelectInput__dropdown__group__item__icon__letter {
+        background-color: var(--color-magenta);
+      }
+    }
   }
 
   &:before {
