Enhance context table column actions (#241)
* Add hide column option to column actions

* Add move left/right option to column actions

* Add move to start/end of the pane option to column actions

* Add sort by option to column actions

* Add ability to sort by column in dashboard view

* Update CHANGELOG.md

* Apply formatting

--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -141,12 +141,15 @@
 }
 
 .Table__action__popup__item {
-  padding: var(--component-spacing-xs) var(--component-spacing-sm);
+  padding: var(--space-xxs) var(--space-xs);
   border-bottom: 1px solid var(--grey-lighter);
   text-transform: capitalize;
   cursor: pointer;
   display: flex;
   align-items: center;
+  color: var(--primary);
+  transition: background-color 110ms ease;
+  user-select: none;
 
   &:last-of-type {
     border-bottom: none;
@@ -157,8 +160,12 @@
   }
 
   &:active {
-    background-color: var(--primary);
-    color: #fff;
+    background-color: var(--primary-lighter);
+    color: var(--primary-darker);
+  }
+
+  .Icon {
+    margin-right: var(--space-xxs);
   }
 }
 
