Add ability to select zoom mode for better UX (#252)
* Add ability to select zoom mode for better UX

* Store zoom mode in LocalStorage

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -256,7 +256,15 @@
   }
 
   & > .Text {
-    margin-right: var(--component-spacing-xs);
+    margin-right: var(--space-xxs);
+  }
+}
+
+.ControlsSidebar__item__popup__list__item__icon {
+  display: flex;
+
+  & > * {
+    display: flex;
   }
 }
 
