--- a/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
@@ -116,6 +116,26 @@
     padding: 0 var(--component-spacing-sm);
   }
 
+  .ChartTitle--zoom {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: #fff;
+    color: var(--grey-dark);
+    border-radius: var(--border-radius);
+
+    &:hover {
+      color: var(--primary);
+    }
+
+    .Icon {
+      font-size: 16px !important;
+    }
+  }
+
   .ChartTitle__index {
     flex-shrink: 0;
     display: flex;
