--- a/client/src/ui/components/Modal/Modal.less
+++ b/client/src/ui/components/Modal/Modal.less
@@ -1,12 +1,3 @@
-.modal-open {
-  overflow: hidden;
-}
-
-.modal-open .modal {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
 .modal {
   position: fixed;
   top: 0;
@@ -16,144 +7,44 @@
   height: 100%;
   overflow: hidden;
   outline: 0;
-}
 
-.modal-dialog {
-  position: relative;
-  width: auto;
-  max-width: 1000px;
-  margin: 3rem auto;
-  pointer-events: none;
-}
+  &__backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10040;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.5;
+  }
 
-.modal.fade .modal-dialog {
-  transform: translate(0, -50px);
-}
+  &__content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: white;
+    background-clip: padding-box;
+    border: 1px solid #d4d4d4;
+    outline: 0;
+    border-radius: 0.2rem;
+    max-width: 1000px;
+    margin: 3rem auto;
+  }
 
-.modal.show .modal-dialog {
-  transform: none;
-}
+  &__body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 1rem;
+  }
 
-.modal.modal-static .modal-dialog {
-  transform: scale(1.02);
-}
-
-.modal-dialog-scrollable {
-  display: flex;
-  max-height: subtract(100%, 1rem);
-}
-
-.modal-dialog-scrollable .modal-content {
-  max-height: subtract(100vh, 1rem);
-  overflow: hidden;
-}
-
-.modal-dialog-scrollable .modal-header,
-.modal-dialog-scrollable .modal-footer {
-  flex-shrink: 0;
-}
-
-.modal-dialog-scrollable .modal-body {
-  overflow-y: auto;
-}
-
-.modal-dialog-centered {
-  display: flex;
-  align-items: center;
-  min-height: subtract(100%, 1rem);
-}
-
-.modal-dialog-centered::before {
-  display: block;
-  height: subtract(100vh, 1rem);
-  content: "";
-}
-
-.modal-dialog-centered.modal-dialog-scrollable {
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-}
-
-.modal-dialog-centered.modal-dialog-scrollable .modal-content {
-  max-height: none;
-}
-
-.modal-dialog-centered.modal-dialog-scrollable::before {
-  content: none;
-}
-
-.modal-content {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  pointer-events: auto;
-  background-color: white;
-  background-clip: padding-box;
-  border: 1px solid #d4d4d4;
-  outline: 0;
-  border-radius: 0.2rem;
-}
-
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10040;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-}
-
-.modal-backdrop.fade {
-  opacity: 0;
-}
-
-.modal-backdrop.show {
-  opacity: 0.5;
-}
-
-.modal-header {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding: 1rem 1rem;
-  border-bottom: 1px solid black;
-}
-
-.modal-header .close {
-  padding: 1rem 1rem;
-  margin: -1rem -1rem -1rem auto;
-}
-
-.modal-title {
-  margin-bottom: 0;
-  line-height: 1rem;
-}
-
-.modal-body {
-  position: relative;
-  flex: 1 1 auto;
-  padding: 1rem;
-}
-
-.modal-footer {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 0.75rem;
-}
-
-.modal-footer > * {
-  margin: 0.25rem;
-}
-
-.modal-scrollbar-measure {
-  position: absolute;
-  top: -9999px;
-  width: 50px;
-  height: 50px;
-  overflow: scroll;
+  &__footer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 1rem;
+  }
 }
